--- a/Image_detail.html
+++ b/Image_detail.html
@@ -130,7 +130,7 @@
 <body>
   <div class="header">
     <div class="logo">
-      <a href="Vyliet-HTML.html"><img src="Logo.png" alt="Vyliet"></a>
+      <a href="index.html"><img src="Logo.png" alt="Vyliet"></a>
     </div>
     <div style="display: flex; align-items: center; gap: 20px;">
       <a href="my_favorites.html">❤️ My Favorites</a>
