--- a/about-us.html
+++ b/about-us.html
@@ -406,7 +406,7 @@
   <header class="main-header">
     <div class="container header-inner">
       <!-- Logo as link -->
-      <a href="Vyliet-HTML.html" class="logo">
+      <a href="index.html" class="logo">
         <img src="Logo.png" alt="Vyliet logo">
       </a>
 
