--- a/my_favorites.html
+++ b/my_favorites.html
@@ -93,7 +93,7 @@
 
   <div class="header">
     <span>❤️ My Favorite Images</span>
-    <a href="Vyliet-HTML.html">⬅️ Quay lại trang chính</a>
+    <a href="index.html">⬅️ Quay lại trang chính</a>
   </div>
 
   <div class="image-grid" id="favoritesGrid">
