--- a/user-profile.html
+++ b/user-profile.html
@@ -195,7 +195,7 @@
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">
-      <a href="Vyliet-HTML.html"><img src="Logo.png" alt="Vyliet Logo"></a>
+      <a href="index.html"><img src="Logo.png" alt="Vyliet Logo"></a>
     </div>
     <div class="search-bar">
       <i class="fa-solid fa-magnifying-glass icon"></i>
