--- a/vyliet_login_verified.html
+++ b/vyliet_login_verified.html
@@ -181,7 +181,7 @@
       if (user && user.emailVerified) {
         console.log("User is verified:", user.email);
         // Uncomment to auto-redirect on verified login
-        // window.location.href = "index.html";
+        // window.location.href = "Vyliet-HTML.html";
       }
     });
   </script>
