--- a/index.html
+++ b/index.html
@@ -537,14 +537,7 @@
       </div>
     </div>
     <div class="action-buttons">
-      <div class="explore-dropdown">
-        <select class="dropdown">
-          <option value="">Explore</option>
-          <option value=""></option>
-          <option value=""></option>
-          <option value=""></option>
-        </select>
-      </div>
+      <a href="about-us.html" class="button" id="about-us-btn">About us</a>
       <a href="vyliet_login_verified.html" id="login-btn">Log in</a>
     </div>
   </header>
