--- a/Image_detail.html
+++ b/Image_detail.html
@@ -207,7 +207,7 @@
   </div>
 
   <div class="comments-section">
-    <h3>Bình luận</h3>
+    <h3>Comment</h3>
     <ul id="commentList"></ul>
     <textarea id="commentInput" placeholder="Nhập bình luận..."></textarea>
     <button id="submitComment" class="btn" style="margin-top:10px;">Gửi bình luận</button>
